--- a/package.json
+++ b/package.json
@@ -13,10 +13,20 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^10.0.1",
     "expo": "^32.0.0",
+    "prop-types": "^15.7.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9"
+    "react-native-paper": "^2.15.2",
+    "react-navigation": "^3.0.9",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "^6.0.0",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-api-middleware": "^3.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
