--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "storybook": "storybook start"
   },
   "jest": {
     "preset": "jest-expo"
@@ -29,14 +30,18 @@
     "redux-saga": "^1.0.2"
   },
   "devDependencies": {
+    "@storybook/react-native": "^4.1.18",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
+    "babel-runtime": "^6.26.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "react-dom": "16.5.0"
   },
   "private": true
 }
