--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "redux-saga": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
     "@storybook/react-native": "^4.1.18",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
+git     "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
     "babel-runtime": "^6.26.0",
     "eslint": "^5.16.0",
