--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm lint"
+      "pre-push": "npm run lint"
     }
   },
   "private": true
