--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@storybook/addons": "^5.0.11",
     "@storybook/react-native": "^4.1.18",
     "babel-core": "^6.26.3",
-git     "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
     "babel-runtime": "^6.26.0",
     "eslint": "^5.16.0",
